# pf-video-transcribe

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
pf_video_transcribe/: __main__.py  converter.py  log.py  types.py  utils.py
pf_video_transcribe/abstract_subtitles/: cli.py  converter.py
pf_video_transcribe/html/: cli.py  converter.py  default.css  default.js
pf_video_transcribe/index_html/: cli.py  html_info.py  work.py
pf_video_transcribe/jsonl/: reader.py  writer.py
pf_video_transcribe/serve/: cli.py  work.py
pf_video_transcribe/srt/: cli.py  converter.py
pf_video_transcribe/templates/: __init__.py  index.html.jinja2  write.html.jinja2  write.srt.jinja2  write.vtt.jinja2
pf_video_transcribe/thumbnail/: cli.py  converter.py
pf_video_transcribe/transcribe/: cli.py  work.py
pf_video_transcribe/vtt/: cli.py  converter.py
